--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,12 @@ body {
 		}
 	}
 }
+
+.dashboard-container {
+	width: 100%;
+	height: 95vh;
+	background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
