--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,23 @@
 @import "./reset.scss";
 
 body {
-	font-family: "Montserrat", sans-serif;
 	font-weight: 400;
 	box-sizing: border-box;
 	outline: none !important;
+	background: rgb(255, 255, 255);
+}
+body #fonts {
+	font-family: "Montserrat", sans-serif !important;
+}
+.center-div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .header-container {
 	background-color: rgb(29, 28, 28);
 	height: 58px;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	.logo-container {
 		width: 86%;
 		img {
@@ -24,9 +29,37 @@ body {
 
 .dashboard-container {
 	width: 100%;
-	height: 95vh;
-	background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
+	height: 92vh;
+	// background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: center center;
 	background-size: cover;
+	display: flex;
+	justify-content: center;
+	.filters-container {
+		width: 80%;
+		border: 1px solid rgb(57, 251, 132);
+		padding: 2rem 0;
+	}
+}
+.timeline-filter {
+	width: 50%;
+	margin: 0 auto 1.5rem auto !important;
+	border: 1px solid #fdc400;
+}
+
+.filter-name-label {
+	text-align: center;
+	font-size: 1.1rem !important;
+	font-weight: 300 !important;
+	letter-spacing: 0.1rem !important;
+	padding: 1rem 0;
+	text-transform: uppercase !important;
+}
+
+.multiple-filters {
+	border: 1px solid #df2dd6;
+	padding: 1rem 1.5rem;
+	.date-filter {
+	}
 }
