--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,17 +28,17 @@ body #fonts {
 }
 
 .dashboard-container {
-	width: 100%;
+	width: 80%;
 	height: 92vh;
+	margin: 0 auto !important;
 	// background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	border: 1px solid rgb(57, 251, 132);
 	.filters-container {
-		width: 80%;
-		border: 1px solid rgb(57, 251, 132);
 		padding: 2rem 0;
 	}
 }
