--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ body {
 	background: rgb(255, 255, 255);
 }
 body #fonts {
-	font-family: "Montserrat", sans-serif !important;
+	font-family: "Jost", sans-serif !important;
 }
 .center-div {
 	display: flex;
@@ -26,15 +26,16 @@ body #fonts {
 		}
 	}
 }
-
+.main-container {
+	background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+}
 .dashboard-container {
 	width: 80%;
 	height: 92vh;
 	margin: 0 auto !important;
-	// background: url("https://images.unsplash.com/photo-1517976547714-720226b864c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2400&q=80");
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid rgb(57, 251, 132);
@@ -51,10 +52,10 @@ body #fonts {
 }
 
 .filter-name-label {
-	font-size: 0.9rem !important;
+	font-size: 1.1rem !important;
 	letter-spacing: 0.1rem !important;
 	margin-bottom: 0.8rem !important;
-	font-weight: 500 !important;
+	font-weight: 400 !important;
 	text-transform: uppercase !important;
 }
 
@@ -68,5 +69,31 @@ body #fonts {
 	}
 	.status-filter {
 		width: 25%;
+	}
+}
+.modal-container {
+	font-family: "Jost", sans-serif !important;
+	.modal-header {
+		padding: 0.8rem 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-bottom: 1px solid #ccc;
+		.mission-heading {
+			width: 90%;
+			text-align: center;
+			font-size: 1.5rem;
+			text-transform: uppercase;
+			letter-spacing: 0.3rem;
+		}
+		button {
+			border: none;
+			outline: none;
+			font-size: 1.2rem;
+			font-weight: 300;
+			color: rgb(80, 80, 80);
+			background: none;
+			cursor: pointer;
+		}
 	}
 }
