--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -127,4 +127,4 @@ table {
 	border-spacing: 0;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,600;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600&display=swap");
