--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,18 +34,17 @@ body #fonts {
 }
 .dashboard-container {
 	width: 80%;
-	height: 92vh;
 	margin: 0 auto !important;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid rgb(57, 251, 132);
 	.filters-container {
-		padding: 2rem 0;
+		padding: 1.7rem 0;
 	}
 }
 .timeline-filter {
 	width: 50%;
-	margin: 0 auto 1.5rem auto !important;
+	margin: 0 auto 1rem auto !important;
 }
 .text-align-center {
 	text-align: center !important;
@@ -96,4 +95,32 @@ body #fonts {
 			cursor: pointer;
 		}
 	}
+}
+table {
+	background-color: rgba(0, 0, 0, 0.54);
+}
+.table-heading {
+	width: 200px !important;
+}
+tbody tr {
+	cursor: pointer;
+	background-color: rgb(246, 246, 246);
+	transition: transform 0.4s !important;
+	&:hover {
+		transform: scale(1.03) !important;
+		border: 1px solid rgb(105, 105, 105);
+		box-shadow: 0 4px 13px -3px rgba(0, 0, 0, 0.10196);
+	}
+}
+
+th {
+	text-transform: uppercase !important;
+	letter-spacing: 0.1rem;
+	font-weight: 500 !important;
+}
+td {
+	letter-spacing: 0.6px;
+	font-size: 1rem !important;
+	padding: 0.5rem 0 !important;
+	color: rgb(54, 115, 228) !important;
 }
