--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,7 +20,10 @@ body {
 body #fonts {
 	font-family: "Jost", sans-serif !important;
 }
-
+h2,
+h3 {
+	margin: 0;
+}
 a {
 	outline: none !important;
 	cursor: pointer;
@@ -98,27 +101,110 @@ a {
 .modal-container {
 	font-family: "Jost", sans-serif !important;
 	.modal-header {
-		padding: 0.8rem 0;
+		padding: 0.6rem 0;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid rgb(226, 226, 226);
 		.mission-heading {
+			margin: 0;
 			width: 90%;
 			text-align: center;
-			font-size: 1.5rem;
+			font-size: 1.1rem;
 			text-transform: uppercase;
-			letter-spacing: 0.3rem;
+			letter-spacing: 0.1rem;
 		}
 		button {
 			border: none;
 			outline: none;
 			font-size: 1.2rem;
 			font-weight: 300;
-			color: rgb(80, 80, 80);
+			color: rgb(32, 32, 32);
 			background: none;
 			cursor: pointer;
 		}
+	}
+	.row {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 1rem 1.5rem;
+		width: 100%;
+		color: rgb(37, 105, 231);
+
+		.col-1 {
+			width: 10%;
+			img {
+				width: 100px;
+			}
+		}
+		.col {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: space-between;
+			height: 100%;
+			margin-bottom: 0.8rem;
+			h2 {
+				text-transform: capitalize;
+				font-size: 1.1rem;
+				font-weight: 300;
+				letter-spacing: 0.8px;
+				margin-bottom: 1.5rem;
+			}
+			h3 {
+				text-transform: capitalize;
+				font-size: 1rem;
+				font-weight: 300;
+				letter-spacing: 0.8px;
+			}
+		}
+	}
+	.launch-description {
+		text-align: center;
+		font-size: 1.2rem;
+		color: #333;
+		letter-spacing: 0.2px;
+		margin: 0.5rem 1rem;
+		text-decoration: underline;
+		font-weight: 400;
+	}
+	.details-row {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 1.5rem 1.5rem;
+		div {
+			display: flex;
+			flex-direction: column !important;
+			justify-content: space-between;
+			h3 {
+				text-transform: capitalize;
+				font-size: 1.1rem;
+				font-weight: 300;
+				letter-spacing: 0.3px;
+				color: rgb(37, 105, 231);
+				margin-bottom: 1.5rem;
+			}
+		}
+	}
+	.social-links {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		padding-bottom: 2rem;
+	}
+	.field-name {
+		display: inline-block;
+		min-width: 80px !important;
+		font-size: 0.7rem;
+		text-transform: uppercase;
+		color: rgba(75, 75, 75, 0.835);
+		font-weight: 300;
+		letter-spacing: 1px;
+		padding: 7px;
+		background-color: rgba(231, 231, 231, 0.596);
+		margin-right: 7px;
 	}
 }
 table {
