Fix: minor bugs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -248,6 +248,6 @@ td {
 }
 
 .center-image {
-	text-align: center;
-	display: inline;
+	display: flex !important;
+	justify-content: center !important;
 }
